// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsMembersPage should match snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="mock-css.
  justify-content: space-between;
"
      >
        <mock-styled.h1
          classname=""
        >
          Members
        </mock-styled.h1>
      </mock-styled.div>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div />
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="mock-css.
  margin-bottom: 2.5rem;
"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="5"
      >
        <mock-styled.div>
          <mock-styled.div>
            Name
          </mock-styled.div>
          <mock-styled.div>
            Status
          </mock-styled.div>
          <mock-styled.div>
            Email
          </mock-styled.div>
          <mock-styled.div>
            Role
          </mock-styled.div>
          <mock-styled.div>
            Main Contact
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname=""
              style="font-size: 1.2rem;"
            >
              <svg />
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.span
                classname="mock-css."
              >
                <svg />
              </mock-styled.span>
              <mock-styled.div
                data-narrow-label="Name"
              >
                Joe Dev
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                data-narrow-label="Status"
              >
                <mock-styled.span
                  classname="mock-css."
                />
                 
                Active
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.span
                classname="mock-css."
              >
                <svg />
              </mock-styled.span>
              <mock-styled.div
                data-narrow-label="Email"
              >
                example@email.com
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Role"
              >
                Admin
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                data-narrow-label="Main Contact"
              >
                <mock-styled.span
                  classname="mock-css."
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.span
                classname="mock-css."
              >
                <svg />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.button
                    classname="mock-css."
                    disabled="false"
                  >
                    Set As 
                    User
                    <mock-styled.div />
                  </mock-styled.button>
                  <mock-styled.button
                    classname="mock-css."
                    disabled="false"
                  >
                    Invite Again
                    <mock-styled.div />
                  </mock-styled.button>
                  <mock-styled.button
                    classname="mock-css."
                    disabled="false"
                  >
                    Disable
                    <mock-styled.div />
                  </mock-styled.button>
                  <mock-styled.button
                    classname="mock-css."
                  >
                    Set As Main Contact
                    <mock-styled.div />
                  </mock-styled.button>
                  <mock-styled.button
                    classname="mock-css."
                    disabled="false"
                  >
                    Delete
                    <mock-styled.div />
                  </mock-styled.button>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            value="1"
          />
           of 
          1
        </mock-styled.div>
        <mock-styled.button
          data-testid="back-button"
          type="button"
        >
          <mock-styled.span
            classname=""
          >
            <svg />
          </mock-styled.span>
        </mock-styled.button>
        <mock-styled.button
          data-testid="forward-button"
          type="button"
        >
          <mock-styled.span
            classname=""
          >
            <svg />
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="mock-css.
  justify-content: space-between;
"
    >
      <mock-styled.h1
        classname=""
      >
        Members
      </mock-styled.h1>
    </mock-styled.div>
    <mock-styled.div
      classname=""
    >
      <mock-styled.div>
        <mock-styled.div />
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname="mock-css.
  margin-bottom: 2.5rem;
"
      data-has-call-to-action="false"
      data-has-expandable-action="true"
      data-num-columns-excl-action-col="5"
    >
      <mock-styled.div>
        <mock-styled.div>
          Name
        </mock-styled.div>
        <mock-styled.div>
          Status
        </mock-styled.div>
        <mock-styled.div>
          Email
        </mock-styled.div>
        <mock-styled.div>
          Role
        </mock-styled.div>
        <mock-styled.div>
          Main Contact
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.span
            classname=""
            style="font-size: 1.2rem;"
          >
            <svg />
          </mock-styled.span>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.span
              classname="mock-css."
            >
              <svg />
            </mock-styled.span>
            <mock-styled.div
              data-narrow-label="Name"
            >
              Joe Dev
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              data-narrow-label="Status"
            >
              <mock-styled.span
                classname="mock-css."
              />
               
              Active
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.span
              classname="mock-css."
            >
              <svg />
            </mock-styled.span>
            <mock-styled.div
              data-narrow-label="Email"
            >
              example@email.com
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div
              data-narrow-label="Role"
            >
              Admin
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              data-narrow-label="Main Contact"
            >
              <mock-styled.span
                classname="mock-css."
              >
                <svg />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.span
              classname="mock-css."
            >
              <svg />
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.button
                  classname="mock-css."
                  disabled="false"
                >
                  Set As 
                  User
                  <mock-styled.div />
                </mock-styled.button>
                <mock-styled.button
                  classname="mock-css."
                  disabled="false"
                >
                  Invite Again
                  <mock-styled.div />
                </mock-styled.button>
                <mock-styled.button
                  classname="mock-css."
                  disabled="false"
                >
                  Disable
                  <mock-styled.div />
                </mock-styled.button>
                <mock-styled.button
                  classname="mock-css."
                >
                  Set As Main Contact
                  <mock-styled.div />
                </mock-styled.button>
                <mock-styled.button
                  classname="mock-css."
                  disabled="false"
                >
                  Delete
                  <mock-styled.div />
                </mock-styled.button>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div>
      <mock-styled.div>
        <mock-styled.input
          value="1"
        />
         of 
        1
      </mock-styled.div>
      <mock-styled.button
        data-testid="back-button"
        type="button"
      >
        <mock-styled.span
          classname=""
        >
          <svg />
        </mock-styled.span>
      </mock-styled.button>
      <mock-styled.button
        data-testid="forward-button"
        type="button"
      >
        <mock-styled.span
          classname=""
        >
          <svg />
        </mock-styled.span>
      </mock-styled.button>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SettingsMembersPage should match snapshot for mobile view 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
    </div>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="mock-css.
  justify-content: space-between;
"
      >
        <mock-styled.h1
          classname=""
        >
          Members
        </mock-styled.h1>
        <mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.button
              classname="mock-css."
            >
              Controls
              <mock-styled.div />
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div />
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="mock-css.
  margin-bottom: 2.5rem;
"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="5"
      >
        <mock-styled.div>
          <mock-styled.div>
            Name
          </mock-styled.div>
          <mock-styled.div>
            Status
          </mock-styled.div>
          <mock-styled.div>
            Email
          </mock-styled.div>
          <mock-styled.div>
            Role
          </mock-styled.div>
          <mock-styled.div>
            Main Contact
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.span
              classname=""
              style="font-size: 1.2rem;"
            >
              <svg />
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.span
                classname="mock-css."
              >
                <svg />
              </mock-styled.span>
              <mock-styled.div
                data-narrow-label="Name"
              >
                Joe Dev
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                data-narrow-label="Status"
              >
                <mock-styled.span
                  classname="mock-css."
                />
                 
                Active
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.span
                classname="mock-css."
              >
                <svg />
              </mock-styled.span>
              <mock-styled.div
                data-narrow-label="Email"
              >
                example@email.com
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.div
                data-narrow-label="Role"
              >
                Admin
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                data-narrow-label="Main Contact"
              >
                <mock-styled.span
                  classname="mock-css."
                >
                  <svg />
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.span
                classname="mock-css."
              >
                <svg />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.div
                  classname="mock-css."
                >
                  <mock-styled.button
                    classname="mock-css."
                    disabled="false"
                  >
                    Set As 
                    User
                    <mock-styled.div />
                  </mock-styled.button>
                  <mock-styled.button
                    classname="mock-css."
                    disabled="false"
                  >
                    Invite Again
                    <mock-styled.div />
                  </mock-styled.button>
                  <mock-styled.button
                    classname="mock-css."
                    disabled="false"
                  >
                    Disable
                    <mock-styled.div />
                  </mock-styled.button>
                  <mock-styled.button
                    classname="mock-css."
                  >
                    Set As Main Contact
                    <mock-styled.div />
                  </mock-styled.button>
                  <mock-styled.button
                    classname="mock-css."
                    disabled="false"
                  >
                    Delete
                    <mock-styled.div />
                  </mock-styled.button>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            value="1"
          />
           of 
          1
        </mock-styled.div>
        <mock-styled.button
          data-testid="back-button"
          type="button"
        >
          <mock-styled.span
            classname=""
          >
            <svg />
          </mock-styled.span>
        </mock-styled.button>
        <mock-styled.button
          data-testid="forward-button"
          type="button"
        >
          <mock-styled.span
            classname=""
          >
            <svg />
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="mock-css.
  justify-content: space-between;
"
    >
      <mock-styled.h1
        classname=""
      >
        Members
      </mock-styled.h1>
      <mock-styled.div>
        <mock-styled.div
          classname="mock-css."
        >
          <mock-styled.button
            classname="mock-css."
          >
            Controls
            <mock-styled.div />
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname=""
    >
      <mock-styled.div>
        <mock-styled.div />
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname="mock-css.
  margin-bottom: 2.5rem;
"
      data-has-call-to-action="false"
      data-has-expandable-action="true"
      data-num-columns-excl-action-col="5"
    >
      <mock-styled.div>
        <mock-styled.div>
          Name
        </mock-styled.div>
        <mock-styled.div>
          Status
        </mock-styled.div>
        <mock-styled.div>
          Email
        </mock-styled.div>
        <mock-styled.div>
          Role
        </mock-styled.div>
        <mock-styled.div>
          Main Contact
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.span
            classname=""
            style="font-size: 1.2rem;"
          >
            <svg />
          </mock-styled.span>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.span
              classname="mock-css."
            >
              <svg />
            </mock-styled.span>
            <mock-styled.div
              data-narrow-label="Name"
            >
              Joe Dev
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              data-narrow-label="Status"
            >
              <mock-styled.span
                classname="mock-css."
              />
               
              Active
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.span
              classname="mock-css."
            >
              <svg />
            </mock-styled.span>
            <mock-styled.div
              data-narrow-label="Email"
            >
              example@email.com
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.div
              data-narrow-label="Role"
            >
              Admin
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              data-narrow-label="Main Contact"
            >
              <mock-styled.span
                classname="mock-css."
              >
                <svg />
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.span
              classname="mock-css."
            >
              <svg />
            </mock-styled.span>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.div
                classname="mock-css."
              >
                <mock-styled.button
                  classname="mock-css."
                  disabled="false"
                >
                  Set As 
                  User
                  <mock-styled.div />
                </mock-styled.button>
                <mock-styled.button
                  classname="mock-css."
                  disabled="false"
                >
                  Invite Again
                  <mock-styled.div />
                </mock-styled.button>
                <mock-styled.button
                  classname="mock-css."
                  disabled="false"
                >
                  Disable
                  <mock-styled.div />
                </mock-styled.button>
                <mock-styled.button
                  classname="mock-css."
                >
                  Set As Main Contact
                  <mock-styled.div />
                </mock-styled.button>
                <mock-styled.button
                  classname="mock-css."
                  disabled="false"
                >
                  Delete
                  <mock-styled.div />
                </mock-styled.button>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div>
      <mock-styled.div>
        <mock-styled.input
          value="1"
        />
         of 
        1
      </mock-styled.div>
      <mock-styled.button
        data-testid="back-button"
        type="button"
      >
        <mock-styled.span
          classname=""
        >
          <svg />
        </mock-styled.span>
      </mock-styled.button>
      <mock-styled.button
        data-testid="forward-button"
        type="button"
      >
        <mock-styled.span
          classname=""
        >
          <svg />
        </mock-styled.span>
      </mock-styled.button>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
